# esp-config-state

./: .gitignore  CMakeLists.txt  Kconfig  README.md  idf_component.yml  library.json
.github/workflows/: build.yml
example/: CMakeLists.txt  platformio.ini
example/main/: CMakeLists.txt  app_config.cpp  app_config.h  config_state_example_main.cpp  config_state_sample.cpp
include/: config_state.h  config_state_gpio.h  config_state_helper.h
libraries/rapidjson/: CMakeLists.txt  ExternalComponent.cmake
src/: config_state.cpp  config_state_gpio.cpp  config_state_helper.cpp
test/: CMakeLists.txt
test/main/: CMakeLists.txt  app_config.cpp  app_config.h  config_state_test.c  config_state_test.cpp  document_test.cpp  nvs_test.cpp
